trunk/Archive2/dc/376410209ebf81/output
main.cpp:14:18: warning: expression result unused [-Wunused-value]
            (bal - 100);
             ~~~ ^ ~~~
main.cpp:21:18: warning: expression result unused [-Wunused-value]
            (bal - 50);
             ~~~ ^ ~~
main.cpp:28:18: warning: expression result unused [-Wunused-value]
            (bal - 20);
             ~~~ ^ ~~
main.cpp:35:18: warning: expression result unused [-Wunused-value]
            (bal - 10);
             ~~~ ^ ~~
main.cpp:43:18: warning: expression result unused [-Wunused-value]
            (bal - 5);
             ~~~ ^ ~
main.cpp:50:18: warning: expression result unused [-Wunused-value]
            (bal - 2);
             ~~~ ^ ~
main.cpp:57:18: warning: expression result unused [-Wunused-value]
            (bal - 1);
             ~~~ ^ ~
main.cpp:73:1: error: unknown type name 'c'
c++
^
main.cpp:73:2: error: expected unqualified-id
c++
 ^
7 warnings and 2 errors generated.
